Changes in 0.3
        * (@taboca) test/demo cleanup
        * (@lloyd) nested iframes in web content no longer have a window.top that points into application code (issue #84)
        * (@deadprogrammer) fixes to child_process library (issue #95)
        * (@lloyd) correct xulrunner download url and checksums for 32bit linux (issue #92)
        * (@lloyd) allow either 'menubars' or 'menubar' in appinfo.json to achieve code and documentation harmony.
        * (@lloyd) 'simple-storage' and 'session-storage' removed.  just use window.localStorage and/or IndexedDB (issue #79)
        * (@taboca) Community require not defined (issue #96)
        * (@taboca) Event listeners broken on iframe (issue #98)
        * (@taboca) updated ./gallery/ereader-transcoder version
        * (@taboca) window.open() fixed (issue #43)
        * (@lloyd) moved all javascript modules under modules/ with a simplified hierarchy. (partial - issue #82)
        * (@lloyd) the window parameter to fullscreen functions is now optional, default is current active application window.