@@ -1,0 +1,4 @@
+lib/libmylib.so
+lib/libmylib.dylib
+lib/mylib.dll
+
