@@ -1,0 +1,6 @@
+
+to run this test, you need to build the native library it demonstrates accessing.
+
+On linux/gcc:
+  gcc -fPIC -shared -o lib/libmylib.so lib/mylib.c 
+
