@@ -1,0 +1,6 @@
+{
+  "name": "jsctypes using app",
+  "module_dirs": [
+    "lib"
+  ]
+}
