@@ -1,0 +1,4 @@
+<script>
+const mylib = require('mylib');
+console.log(mylib.getString());
+</script>
