@@ -1,0 +1,4 @@
+const char * gettaStringFromNativeCode(void) 
+{
+    return "This string has come a loooong way";
+}
